--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         tools:targetApi="31">
         <activity
             android:name=".QuizQuestionsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.QuizApp"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
